--- a/package.json
+++ b/package.json
@@ -5,21 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "npx tsc && node dist/server.js",
-    "dev": "nodemon --exec npx ts-node src/server.ts"
+    "start": "docker compose up -d --build",
+    "stop": "docker compose down",
+    "logs": "docker compose logs -f",
+    "restart": "docker compose down && docker compose up -d --build",
+    "rebuild": "docker compose up -d --build",
+    "clean": "docker compose down --rmi all --volumes --remove-orphans"
   },
-  "author": "Nassime ABDIOU",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.2",
-    "nodemon": "^3.1.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  }
+  "author": "ABDIOU Nassime",
+  "license": "ISC"
 }
